<resources>
    <string name="app_name">MAD</string>
    <string name="t1">From</string>
    <string name="t2">To</string>
    <string name="t3">Date</string>
    <string name="t4">Time</string>
    <string name="t5">No of seats</string>
    <string name="b1">Book</string>
    <string name="b2">Back</string>
    <string name="b3">Clear</string>
    <string name="t6">Booking Details</string>
</resources>
